<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="match_parent">
    <TextView
            android:text="@string/subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_row="0" android:layout_column="0"
            android:id="@+id/textView3" android:fontFamily="sans-serif-black" android:textSize="16sp"
            android:paddingLeft="10dp" android:paddingRight="10dp"/>
    <TextView
            android:text="@string/grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_row="0" android:layout_column="1"
            android:id="@+id/textView4" android:fontFamily="sans-serif-black" android:textSize="16sp"
            android:paddingLeft="10dp" android:paddingRight="10dp"/>
    <TextView
            android:text="@string/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_row="0" android:layout_column="2"
            android:id="@+id/textView5" android:fontFamily="sans-serif-black" android:textSize="16sp"
            android:paddingLeft="10dp" android:paddingRight="10dp"/>
    <TextView
            android:text="@string/teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_row="0" android:layout_column="3"
            android:id="@+id/textView6" android:fontFamily="sans-serif-black" android:textSize="16sp"
            android:paddingLeft="10dp" android:paddingRight="10dp"/>
    <TextView
            android:text="@string/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_row="1" android:layout_column="0"
            android:id="@+id/sub_field" android:textSize="15sp" android:paddingLeft="10dp" android:paddingRight="10dp"/>
    <TextView
            android:text="@string/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_row="0" android:layout_column="4"
            android:id="@+id/textView8" android:fontFamily="sans-serif-black" android:textSize="16sp"
            android:paddingLeft="10dp" android:paddingRight="10dp"/>
    <TextView
            android:text="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_row="0" android:layout_column="5"
            android:id="@+id/textView9" android:fontFamily="sans-serif-black" android:textSize="16sp"
            android:paddingLeft="10dp" android:paddingRight="10dp"/>
    <TextView
            android:text="@string/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_row="1" android:layout_column="1"
            android:id="@+id/gr_field" android:textSize="15sp" android:paddingLeft="10dp" android:paddingRight="10dp"/>
    <TextView
            android:text="@string/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_row="1" android:layout_column="2"
            android:id="@+id/wg_field" android:textSize="15sp" android:paddingLeft="10dp" android:paddingRight="10dp"/>
    <TextView
            android:text="@string/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_row="1" android:layout_column="3"
            android:id="@+id/tea_field" android:textSize="15sp" android:paddingLeft="10dp" android:paddingRight="10dp"/>
    <TextView
            android:text="@string/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_row="1" android:layout_column="4"
            android:id="@+id/date_field" android:textSize="15sp" android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
    <TextView
            android:text="@string/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_row="1" android:layout_column="5"
            android:id="@+id/descr_field" android:paddingLeft="10dp" android:paddingRight="10dp"/>
</GridLayout>